--- a/tariffs.html
+++ b/tariffs.html
@@ -887,7 +887,7 @@
             </div>
         </section>
 
-        <section class="why">
+        <section class="why tariff-why">
             <div class="container">
                 <h2 class="section_title">Почему SMS Traffic?</h2>
                 <div class="why_block">
